stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_expected_allowance_expr.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "4f482d19bef3c57c2e1b771ac6c7a5272fae189e435e13c8d087777c5c8879e2",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-allowa-expr-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expected an allowance expression, got: not) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1653,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1653,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "054668b54fe299c7e6b9bc342a019c3feea784ffe1ffa611fec9426dc375ddac",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-allowa-expr-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expected an allowance expression, got: not) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1653,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1653,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b8c5fb5226c9823076bf03a3a78ff4f849c3f1981c84c0dcb2dae4acfc22814",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-allowa-expr-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expected an allowance expression, got: not) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1653,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1653,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bd62028e48e192d5c2247f210312a400c74bdb08961ecfafc40a982c4123a867",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-allowa-expr-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expected an allowance expression, got: not) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1653,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1653,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9ee7d4674d78b16017d1f95d94059390ef9e9c528293fcf6f41bd7be27501880",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: exp-allowa-expr-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: expected an allowance expression, got: not) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 9,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1653,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 9,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1653,
    ),
  )),
]
