stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_expected_list_application.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "be04a15088c384ae24a3d30a1647dc32518a26199900ed74b5f1dbd46324ae38",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-list-appl-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: expecting expression of type list) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b202baf4a3617384f7a041f92998ad4123df2716a806945b0ae31e6ac9d9165a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-list-appl-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: expecting expression of type list) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "486db6c617275762b309f7da1abd2a0994c55628ad0dbc1a434efa43b20682cd",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-list-appl-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: expecting expression of type list) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cec1cbf398d3406b8791f64fa33027e2816c2572bda9dab9a951789c0cf24552",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-list-appl-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: expecting expression of type list) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "aa1a0789cf8a80a2d0c3cbe66522ffc342369217753f98ff65e899416082a2a8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: expected-list-appl-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: expecting expression of type list) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 605,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 605,
    ),
  )),
]
